# lot_prj-for-esp32s3

./: .gitignore  CMakeLists.txt  README.md  build.sh  partitions.csv  result.txt  result2.txt  sdkconfig.defaults
.github/workflows/: ci.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
src/APP/: Kconfig.in
src/APP/lot_lvgl/: CMakeLists.txt  Kconfig.in  lot_lvgl.c
src/APP/lot_lvgl/TOUCH/: click.c  click.h  longpress.c  longpress.h  swipe.c  swipe.h  touch.c  touch.h
src/APP/lot_lvgl/UI/: disp_sets.h  ui.h  ui_type.h
src/APP/lot_lvgl/UI/include/: Homepage.h  System_ui.h  desktop.h  lot_ui.h
src/APP/lot_lvgl/UI/module/: settings_modules.h
src/APP/lot_lvgl/UI/module/BLE/: ble_module.c
src/APP/lot_lvgl/UI/module/WIFI/: wifi_module.c
src/APP/lot_lvgl/UI/module/about/: about_module.c
src/APP/lot_lvgl/UI/module/battery/: battery_module.c
src/APP/lot_lvgl/UI/module/display/: display_module.c
src/APP/lot_lvgl/UI/module/setting/: settings_panel.c  settings_panel.h
src/APP/lot_lvgl/UI/module/version/: version_module.c
src/APP/lot_lvgl/UI/src/: Homepage.c  Lock.c  System_ui.c  desktop.c
src/APP/lot_lvgl/assets/: bluetooth_48x48_hd.c  brightness_24x24.c  settings_48x48_clean.c  wifi_48x48_hd.c
src/APP/lot_lvgl/include/: lot_lvgl.h
src/APP/modbus/: CMakeLists.txt  Kconfig.in  lot_modbus.c
src/APP/modbus/include/: lot_modbus.h
src/APP/network/: CMakeLists.txt  Kconfig.in  lot_network.c
src/APP/network/include/: lot_network.h
src/APP/network/mqtt/: lot_mqtt.c
src/APP/network/websocket/: lot_websocket.c
src/APP/ota/: CMakeLists.txt  Kconfig.in  lot_ota.c  todo
src/APP/ota/include/: lot_ota.h
src/APP/proto/: CMakeLists.txt  lot.options  lot.pb.c  lot.pb.h  lot.proto  lot_proto.c
src/APP/proto/include/: lot_proto.h
src/HW/: Kconfig.in
src/HW/ble/: CMakeLists.txt  Kconfig.in  lot_ble.c
src/HW/ble/include/: lot_ble.h
src/HW/lcd/: CMakeLists.txt  Kconfig.in  lot_lcd.c
src/HW/lcd/include/: lot_lcd.h
src/HW/wifi/: CMakeLists.txt  Kconfig.in  lot_wifi.c
src/HW/wifi/include/: lot_wifi.h
src/SYSTEM/: Kconfig.in
src/SYSTEM/devinfo/: CMakeLists.txt  Kconfig.in  lot_devinfo.c
src/SYSTEM/devinfo/include/: lot_devinfo.h
src/SYSTEM/launch/: CMakeLists.txt  Kconfig.in  launch.c  launch.h
src/SYSTEM/lot_littlefs/: CMakeLists.txt  Kconfig.in  lot_littlefs.c
src/SYSTEM/lot_littlefs/include/: lot_littlefs.h
src/SYSTEM/ntp/: CMakeLists.txt  Kconfig.in  lot_ntp.c
src/SYSTEM/ntp/include/: lot_ntp.h
src/SYSTEM/power/: CMakeLists.txt  Kconfig.in  frequency.c  lot_power.c  power_mode.c
src/SYSTEM/power/include/: frequency.h  lot_power.h  power_mode.h
src/SYSTEM/sys_threadpool/: CMakeLists.txt  Kconfig.in  lot_threadpool.c
src/SYSTEM/sys_threadpool/include/: lot_threadpool.h
src/SYSTEM/time/: CMakeLists.txt  time.c  time.h
src/SYSTEM/version/: CMakeLists.txt  Kconfig.in  lot_version.c
src/SYSTEM/version/include/: lot_version.h
tests/: test_partitions.py  test_version_file.py
