idf_component_register(SRCS "lot_lvgl.c"
                            "UI/src/Lock.c"
                            "UI/src/desktop.c"
                            "UI/src/System_ui.c"
                            "UI/module/setting/settings_panel.c"
                            "UI/module/battery/battery_module.c"
                            "UI/module/about/about_module.c"
                            "UI/module/display/display_module.c"
                            "UI/module/WIFI/wifi_module.c"
                            "UI/module/BLE/ble_module.c"
                            "UI/module/version/version_module.c"
                            "assets/bluetooth_48x48_hd.c"
                            "assets/wifi_48x48_hd.c"
                            "assets/settings_48x48_clean.c"
                            "assets/brightness_24x24.c"
                            "TOUCH/touch.c"
                            "TOUCH/click.c"
                            "TOUCH/longpress.c"
                            "TOUCH/swipe.c"
                       INCLUDE_DIRS "include"
                                    "UI/include"
                                    "UI"
                                    "TOUCH"
                                    "../../SYSTEM"
                       REQUIRES lcd esp_lvgl_port time ota ble power devinfo
                       PRIV_REQUIRES bt esp_wifi)
